[package]
name = "strum"
version = "0.17.1"
authors = ["Peter Glotfelty <peter.glotfelty@microsoft.com>"]
license = "MIT"

description = "Helpful macros for working with enums and strings"
keywords = ["enum", "string", "macros", "proc-macros"]
categories = ["development-tools::procedural-macro-helpers", "parsing"]

documentation = "https://docs.rs/strum"
homepage = "https://github.com/Peternator7/strum"
readme = "../README.md"

[dependencies]
strum_macros = { path = "../strum_macros", optional = true, version = "0.17.1" }

[dev-dependencies]
strum_macros = { path = "../strum_macros", version = "0.17.1" }

[badges]
travis-ci = { repository = "Peternator7/strum" }

[features]
derive = ["strum_macros"]
