[package]
name = "strum"
version = "0.19.2"
edition = "2018"
authors = ["Peter Glotfelty <peter.glotfelty@microsoft.com>"]
license = "MIT"

description = "Helpful macros for working with enums and strings"
keywords = ["enum", "string", "macros", "proc-macros"]
categories = ["development-tools::procedural-macro-helpers", "parsing"]

documentation = "https://docs.rs/strum"
homepage = "https://github.com/Peternator7/strum"
repository = "https://github.com/Peternator7/strum"
readme = "../README.md"

[dependencies]
strum_macros = { path = "../strum_macros", optional = true, version = "0.19.2" }

[dev-dependencies]
strum_macros = { path = "../strum_macros", version = "0.19.2" }

[badges]
travis-ci = { repository = "Peternator7/strum" }

[features]
derive = ["strum_macros"]
