[package]
name = "strum_macros"
version = "0.16.0"
authors = ["Peter Glotfelty <peter.glotfelty@microsoft.com>"]
license = "MIT"

description = "Helpful macros for working with enums and strings"
keywords = ["enum", "string", "macros", "proc-macros"]
categories = ["development-tools::procedural-macro-helpers", "parsing"]

documentation = "https://docs.rs/strum"
homepage = "https://github.com/Peternator7/strum"
readme = "../README.md"

[lib]
proc-macro = true
name = "strum_macros"

[dependencies]
heck = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["parsing", "extra-traits"] }

[features]
verbose-enumstring-name = []
verbose-asrefstr-name = []
verbose-variant-names = []
verbose-asstaticstr-name = []
verbose-intostaticstr-name = []
verbose-tostring-name = []
verbose-display-name = []
verbose-enumiter-name = []
verbose-enummessage-name = []
verbose-enumproperty-name = []
verbose-enumdiscriminants-name = []
verbose-enumcount-name = []