[package]
name = "strum_macros"
version = "0.27.1"
edition = "2021"
authors = ["Peter Glotfelty <peter.glotfelty@microsoft.com>"]
license = "MIT"

description = "Helpful macros for working with enums and strings"
keywords = ["enum", "string", "macros", "proc-macros"]
categories = ["development-tools::procedural-macro-helpers", "parsing"]

documentation = "https://docs.rs/strum"
homepage = "https://github.com/Peternator7/strum"
repository = "https://github.com/Peternator7/strum"
readme = "../README.md"
rust-version = "1.66.1"

[lib]
proc-macro = true
name = "strum_macros"

[features]
default = ["heck"]
convert_case = ["dep:convert_case"]
heck = ["dep:heck"]

[dependencies]
heck = { version = "0.5.0", optional = true }
convert_case = { version = "0.8.0", optional = true }
proc-macro2 = "1.0"
quote = "1.0"
rustversion = "1.0"
syn = { version = "2.0", features = ["parsing"] }

[dev-dependencies]
strum = { path = "../strum" }
