[package]
name = "strum_nostd_tests"
version = "0.25.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { path = "../strum", default-features = false }
strum_macros = { path = "../strum_macros", default-features = false }
