[package]
name = "strum_tests"
version = "0.24.0"
edition = "2018"
authors = ["Peter Glotfelty <peglotfe@microsoft.com>"]

[features]
default = ["test_phf"]
test_phf = ["strum/phf"]

[dependencies]
strum = { path = "../strum", features = ["derive"] }
strum_macros = { path = "../strum_macros", features = [] }
clap = "=2.33.0"
enum_variant_type = "=0.2.0"
structopt = "0.2.18"
bitflags = "=1.2"
if_rust_version = "1.0"

[dev-dependencies]
rustversion = "1.0"
