[package]
name = "strum_tests"
version = "0.26.0"
edition = "2018"
authors = ["Peter Glotfelty <peglotfe@microsoft.com>"]

[features]
default = []
test_phf = ["strum/phf"]

[dependencies]
strum = { path = "../strum", features = ["derive"] }
strum_macros = { path = "../strum_macros", features = [] }
clap = "=2.33.0"
enum_variant_type = "=0.2.0"
structopt = "0.2.18"
bitflags = "=2.5"

[dev-dependencies]
rustversion = "1.0"
